--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "babel-loader": "^8.0.6",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
+    "react-router-dom": "^5.1.2",
     "serve": "^11.2.0",
     "webpack": "^4.41.4",
     "webpack-cli": "^3.3.10"
